--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,60 @@
-sudo: false
+# Copyright 2015, Google, Inc.
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+sudo: required
 language: node_js
 node_js:
 - "stable"
 - "0.12"
 - "0.10"
+
+cache:
+  directories:
+  - $HOME/gcloud/
+  - 1-hello-world/node_modules/
+  - 2-structured-data/node_modules/
+  - 3-binary-data/node_modules/
+  - 4-auth/node_modules/
+  - 5-logging/node_modules/
+  - 6-pubsub/node_modules/
+  - 7-gce/node_modules/
+  - $TRAVIS_BUILD_DIR/node_modules/
+
+services:
+  - docker
+
+env:
+  - PATH=$PATH:$HOME/gcloud/google-cloud-sdk/bin GOOGLE_APPLICATION_CREDENTIALS=$TRAVIS_BUILD_DIR/test/encrypted/nodejs-docs-samples.json TEST_BUCKET_NAME=nodejs-docs-samples TEST_PROJECT_ID=nodejs-docs-samples #Other environment variables on same line
+
+before_install:
+  - if [ ! -d $HOME/gcloud/google-cloud-sdk ]; then
+      mkdir -p $HOME/gcloud &&
+      wget https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz --directory-prefix=$HOME/gcloud &&
+      cd $HOME/gcloud &&
+      tar xzf google-cloud-sdk.tar.gz &&
+      printf '\ny\n\ny\ny\n' | ./google-cloud-sdk/install.sh &&
+      source /home/travis/.bash_profile &&
+      cd $TRAVIS_BUILD_DIR;
+    fi
+  - gcloud components update -q
+  - gcloud components update app -q
+  - openssl aes-256-cbc -K $encrypted_06352980ac5c_key -iv $encrypted_06352980ac5c_iv -in test/encrypted/nodejs-docs-samples.json.enc -out test/encrypted/nodejs-docs-samples.json -d
+  - if [ -a test/encrypted/nodejs-docs-samples.json ]; then
+      gcloud auth activate-service-account --key-file test/encrypted/nodejs-docs-samples.json;
+    fi
+
+after_success:
+- npm run coveralls
+
+after_script:
+  - gsutil -m cp *.log gs://nodejs-docs-samples-travis-deployments
