--- a/7-gce/package.json
+++ b/7-gce/package.json
@@ -8,8 +8,9 @@
     "start": "node ${SCRIPT:-app.js}",
     "monitor": "nodemon ${SCRIPT:-app.js}",
     "deploy": "gcloud preview app deploy app.yaml worker.yaml",
-    "lint": "jshint --exclude-path=.gitignore .",
-    "test": "npm run lint",
+    "lint": "jshint --exclude-path=../.gitignore .",
+    "mocha": "mocha test/*.test.js",
+    "test": "npm run lint && npm run mocha",
     "init-cloudsql": "node books/model-cloudsql.js"
   },
   "author": "Google Inc.",
@@ -47,7 +48,11 @@
     "winston": "^1.1.1"
   },
   "devDependencies": {
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "mocha": "^2.3.4",
+    "proxyquire": "^1.7.3",
+    "sinon": "^1.17.2",
+    "supertest": "^1.1.0"
   },
   "engines": {
     "node": ">=0.12.7"
